tests/negative/issue2771/Main.juvix
module Main;

type T := t;
open T;

type Box := mkBox {unbox : T};
open Box using {mkBox};

f (b : Box) : Box := case b of mkBox _ := mkBox t;

main : T := f (mkBox t);
